fix overflowing main element to 100vh

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ main, #container {
 main {
     height: fit-content;
     width: fit-content;
+    max-height: 100vh;
     padding: 0px 3rem 0px 3rem;
     background-color: rgb(2, 2, 60);
     border-radius: 3%;
